--- a/src/main/webapp/reportInstitution/report_own.xhtml
+++ b/src/main/webapp/reportInstitution/report_own.xhtml
@@ -22,7 +22,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="By Category Month End" action="report_cash_category_with_pro_month"/>                             
                                     </h:panelGrid>
                                 </p:panel>
-                                
+
                                 <p:panel header="4) Summary By Service Opd" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
                                     <h:panelGrid >                               
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Summary By Service" action="report_opd_service_summery" /> 
@@ -38,6 +38,13 @@
 
                                     </h:panelGrid>
                                 </p:panel>
+                                <p:panel header="10) VAT Report" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
+                                    <h:panelGrid >                               
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="OPD VAT 15%" action="/reportCashier/report_opd_bills_for_vat"/> 
+                                        <p:commandButton styleClass="linkButton" ajax="false" value="All Channel Bill With Vat" action="/channel/channel_report_all_bills_for_vat"/>
+                                        <p:commandButton value="BHT VAT Report" action="/inward/inward_report_bht_inward_vat"  styleClass="linkButton" ajax="false" />
+                                    </h:panelGrid>
+                                </p:panel>
                             </h:panelGrid>
 
                             <h:panelGrid columns="1" >
@@ -45,7 +52,7 @@
                                     <p:commandButton styleClass="linkButton" ajax="false" value="By Category Day End" action="report_cash_category_without_pro_day"/> 
                                     <p:commandButton styleClass="linkButton" ajax="false" value="By Category Month End" action="report_cash_category_without_pro_month"/>                             
                                 </p:panel>
-                                 <p:panel header="5) Summary By Service Inward" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
+                                <p:panel header="5) Summary By Service Inward" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
                                     <h:panelGrid >                               
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Summary By Service - Added Date" action="report_inward_service_detail_added" /> 
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Summary By Service - Discharged Date" action="report_inward_service_detail_discharged" /> 
@@ -60,7 +67,7 @@
                                         <p:commandButton styleClass="linkButton" ajax="false" value="Staff Welfare Balance" action="report_staff_welfare" />
                                     </h:panelGrid>
                                 </p:panel>
-                                
+
                             </h:panelGrid>
                             <h:panelGrid columns="1" >
                                 <p:panel header="3) Day End" style="width: 400px;margin:auto;" collapsed="true" toggleable="true"   >
