--- a/src/main/webapp/inward/inward_reports.xhtml
+++ b/src/main/webapp/inward/inward_reports.xhtml
@@ -45,6 +45,7 @@
                                     <p:commandButton value="BHT Vice Income by Catgories" action="inward_report_bht_vice_income_by_caregories" actionListener="#{mdInwardReportController.makeNull()}" styleClass="linkButton" ajax="false" />
                                     <p:commandButton value="Room Time Report" action="inward_report_room" styleClass="linkButton" ajax="false"/>
                                     <p:commandButton value="Discount Report" action="inward_report_discount" styleClass="linkButton" ajax="false"/>
+                                    <p:commandButton value="BHT VAT Report" action="inward_report_bht_inward_vat"  styleClass="linkButton" ajax="false" />
                                 </h:panelGrid>
 
                             </p:panel>
