Signed-off-by: lahirumadushanka <lahirumadushanka2100@gmail.com>

--- a/src/main/webapp/lab/lab_patient_report_print.xhtml
+++ b/src/main/webapp/lab/lab_patient_report_print.xhtml
@@ -24,7 +24,7 @@
 
 
                     <p:commandButton styleClass="nonPrintBlock" ajax="false" value="Print" onclick="window.print();" actionListener="#{patientReportController.printPatientReport()}" />
-                    <p:commandButton styleClass="nonPrintBlock" ajax="false" value="Back" action="/lab_search_for_reporting_ondemand"/>
+                    <!--<p:commandButton styleClass="nonPrintBlock" ajax="false" value="Back" action="/lab_search_for_reporting_ondemand"/>-->
 
 
 
